--- a/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Web/Views/Home/Index.cshtml
+++ b/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Web/Views/Home/Index.cshtml
@@ -7,4 +7,7 @@
     <p class="lead">
         Current application version is @System.Configuration.ConfigurationManager.AppSettings["ApplicationVersion"]
     </p>
+    <p>
+        We are deploying really cool now.
+    </p>
 </div>
